--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "express": "3.1.0",
     "step": "0.0.5",
-    "mongodb":"1.2.14"
+    "mongodb": "1.2.14",
+    "request": "~2.16.6"
   }
 }
